@@ -1,5 +1,10 @@
 
-apply plugin:  'io.quarkus'
+//apply plugin:  'io.quarkus'
+
+plugins {
+    id 'io.quarkus'  version "$quarkusTestServerVersion"
+}
+
 
 group = "com.btyx.test.rpc"
 dependencies {
@@ -16,7 +21,7 @@ dependencies {
     runtimeOnly "io.quarkus:quarkus-hibernate-validator"
 
 
-    implementation platform("io.quarkus:quarkus-bom:${quarkusVersion}")
+    implementation platform("io.quarkus:quarkus-bom:${quarkusTestServerVersion}")
     implementation "io.quarkus:quarkus-arc"
     implementation "io.quarkus:quarkus-netty"
     implementation  "io.quarkus:quarkus-hibernate-validator"
@@ -38,8 +43,8 @@ dependencies {
 //    implementation "com.bt.ext:ext-rpc:1.0.0"
 
     //1.5.2.Final  1.5.0.Beta1
-    implementation 'org.mapstruct:mapstruct:1.5.2.Final'
-    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
+    implementation 'org.mapstruct:mapstruct:1.5.3.Final'
+    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
 
 //    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
 
@@ -49,7 +54,13 @@ dependencies {
         exclude module: 'quarkus-bootstrap-maven-resolver'
     }
     testImplementation "org.slf4j:slf4j-simple:$slf4jVersion"
-    testImplementation 'org.mockito:mockito-core:4.0.0'
+    testImplementation 'org.mockito:mockito-core:4.8.1'
+    testImplementation 'com.btyx.demo:demo-api:1.0.0'
+
+    // https://mvnrepository.com/artifact/org.openjdk.jmh/jmh-core
+    testImplementation 'org.openjdk.jmh:jmh-core:1.35'
+    testImplementation 'org.openjdk.jmh:jmh-generator-annprocess:1.35'
+
 
 //    testImplementation 'org.freemarker:freemarker:2.3.31'
 
@@ -64,6 +75,11 @@ dependencies {
 //    sourceCompatibility = JavaVersion.VERSION_11
 //    targetCompatibility = JavaVersion.VERSION_11
 //}
+compileTestJava {
+    options.compilerArgs += [
+            '--add-exports', "java.base/jdk.internal.vm.annotation=ALL-UNNAMED",
+    ]
+}
 
 compileJava {
     options.encoding = 'UTF-8'
